# Trilo

./: .gitignore  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  help-need.md
.github/workflows/: release.yml
docs/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: sqlite.rs
src-tauri/icons/: icon.icns
src-tauri/src/: clip.rs  config.rs  lib.rs  main.rs  req.rs  tray.rs
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
